# ZoteroAssist

./: .gitignore  LICENSE  Makefile  setup.cfg
src/zotero_assist/: __init__.py  _version.py  app.py  billing.py  constants.py  result.py
src/zotero_assist/knowledge/: key_concepts_of_pdf.py  make_embedded_docs_from_pages.py  make_index_for_pdf.py  query_index_for_summary.py  retrieve_llama_index_for_pdf.py  summarize_pdf.py
src/zotero_assist/widgets/: content.py  interaction.py
src/zotero_assist/zot/: fetch_collection.py  read_pdf_pages.py  resolve_collection_files.py  retrieve_all_local_pdfs.py
tests/: test_meta.py  test_query_zotero_collections.py  test_resolve_zotero_collection_paths.py
