[metadata]
name = zoter_assist
version = attr: zotero_assist.__version__
description = LLM index of Zotero database
author = Bernhard Raml
author_email = bernhard.raml@geo.tuwien.ac.at
platforms = any
classifiers =
    Development Status :: 5 - Production/Stable
    Intended Audience :: Science/Research
    License :: OSI Approved :: MIT License
    Topic :: Scientific/Engineering
    Topic :: Software Development :: Libraries
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Operating System :: POSIX
    Natural Language :: English

[options]
package_dir =
    = src
packages = find:
install_requires =
    llama-index
    pypdf2
    streamlit
[options.packages.find]
where=src

[options.extras_require]
test =
    pytest
    pytest-cov
